build_log_4.txt
Added cuDNN to PATH: C:\Program Files\NVIDIA\CUDNN\v9.6\bin\12.6\x64
Added cl.exe to PATH: C:\Program Files\Microsoft Visual Studio\18\Community\VC\Tools\MSVC\14.50.35717\bin\Hostx64\x64
        Info `tauri` dependency has workspace inheritance enabled. The features array won't be automatically rewritten. Expected features: []
        Info Looking up installed tauri packages to check mismatched versions...
     Running beforeBuildCommand `npm --prefix ui run build`

> ui@0.1.0 build
> next build

Î“Ă»â–“ Next.js 16.2.1 (Turbopack)

  Creating an optimized production build ...
Î“ÂŁĂ´ Compiled successfully in 5.5s
  Running TypeScript ...
  Finished TypeScript in 5.3s ...
  Collecting page data using 8 workers ...
  Generating static pages using 8 workers (0/7) ...
  Generating static pages using 8 workers (1/7) 
  Generating static pages using 8 workers (3/7) 
  Generating static pages using 8 workers (5/7) 
Î“ÂŁĂ´ Generating static pages using 8 workers (7/7) in 1156ms
  Finalizing page optimization ...

Route (app)
Î“Ă¶Ă® Î“ĂąĂŻ /
Î“Ă¶ÂŁ Î“ĂąĂŻ /_not-found
Î“Ă¶ÂŁ Î“ĂąĂŻ /about
Î“Ă¶ÂŁ Î“ĂąĂŻ /icon.png
Î“Ă¶ÂŁ Î“ĂąĂŻ /settings
Î“Ă¶Ă¶ Î“ĂąĂŻ /splashscreen


Î“ĂąĂŻ  (Static)  prerendered as static content

warning: function `set_cache_dir` is never used
  --> koharu-types\src\image.rs:11:8
   |
11 | pub fn set_cache_dir(path: PathBuf) -> anyhow::Result<()> {
   |        ^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `koharu-types` (lib) generated 1 warning
   Compiling koharu-pipeline v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-pipeline)
   Compiling koharu-rpc v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu-rpc)
   Compiling koharu v0.37.0 (C:\Users\b_cer\Downloads\APPProject\koharu\koharu)
error[E0425]: cannot find function `set_cache_dir` in crate `koharu_types`
   --> koharu\src\app.rs:148:19
    |
148 |     koharu_types::set_cache_dir(CACHE_DIR.to_path_buf())?;
    |                   ^^^^^^^^^^^^^ not found in `koharu_types`
    |
help: consider importing this function
    |
  1 + use koharu_ml::set_cache_dir;
    |
help: if you import `set_cache_dir`, refer to it directly
    |
148 -     koharu_types::set_cache_dir(CACHE_DIR.to_path_buf())?;
148 +     set_cache_dir(CACHE_DIR.to_path_buf())?;
    |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `koharu` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
failed to build app: failed to build app
       Error failed to build app: failed to build app
